export env variables

--- a/.github/workflows/k8s-deploy.yaml
+++ b/.github/workflows/k8s-deploy.yaml
@@ -23,10 +23,10 @@ jobs:
     - name: Generate kubeconfig
       run: |
         # Request the OIDC token from GitHub
-        TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
+        export TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
                      "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=my-cluster" \
                      | jq -r .value)
-        API_SERVER_URL=${{ github.event.inputs.apiserver_url }}        
+        export API_SERVER_URL=${{ github.event.inputs.apiserver_url }}        
         ./gen-kubeconfig.sh        
         cat kubeconfig.yaml
     - name: Deploy to Kubernetes
