--- a/.github/workflows/k8s-deploy.yaml
+++ b/.github/workflows/k8s-deploy.yaml
@@ -31,4 +31,5 @@ jobs:
         cat kubeconfig.yaml
     - name: Deploy to Kubernetes
       run: |
-        kubectl get namespace --kubeconfig kubeconfig.yaml
+        export KUBECONFIG=$(pwd)/kubeconfig.yaml
+        ./deploy.sh
