--- a/.github/workflows/k8s-deploy.yaml
+++ b/.github/workflows/k8s-deploy.yaml
@@ -7,6 +7,9 @@ on:
         description: 'API server URL'
         required: true
         default: 'https://apiserver.example.com'
+  push:
+    branches:
+      - main
 
 jobs:
   deploy:
@@ -26,7 +29,11 @@ jobs:
         export TOKEN=$(curl -H "Authorization: Bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
                      "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=my-cluster" \
                      | jq -r .value)
-        export API_SERVER_URL=${{ github.event.inputs.apiserver_url }}        
+        export API_SERVER_URL=${{ github.event.inputs.apiserver_url }} 
+        if [ -z "$API_SERVER_URL" ]; then
+          # if the API server URL is not provided, the workflow will use secret API_SERVER_URL 
+          export API_SERVER_URL= ${{ secrets.API_SERVER_URL }}
+        fi
         ./gen-kubeconfig.sh        
         cat kubeconfig.yaml
     - name: Deploy to Kubernetes
